[project]
name = "marimo-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.1",
    "ipython>=9.7.0",
    "kuzu>=0.11.1",
    "marimo>=0.14.17",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers==3.3.1",
    "transformers==4.46.3",
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
    "psutil>=5.9.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "kuzu>=0.1.0",
]
